--- a/views/reports/payments/Advance.ejs
+++ b/views/reports/payments/Advance.ejs
@@ -7,159 +7,171 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
+<body style="margin-top: 10px;">
   <%- myCss %>
-    <header class="clearfix">
-      <div id="logo">
-        <img src="<%- logo %> ">
-        <h2 class="name">
-          <%- razSocOrigen %>
-        </h2>
-        <div>
-          <%- direccionOrigen %>
-        </div>
-        <div style="font-weight: bold">
-          <%- condIvaOrigen %>
-        </div>
-        <div><a href="mailto:<%- emailOrigen %> ">
-            <%- emailOrigen %>
-          </a></div>
-      </div>
-      <div style="position: absolute;text-align: center;width: 100%;">
-        <h2 class="name" style="font-weight: bold;">ORIGINAL</h2>
-        <div
-          style="width: 80px;height: 80px;background: #80808061;margin: auto;border: 4px solid black;margin-top: 20px;">
-          <h1 style="margin-top: 5px;margin-bottom: 5px;font-size: 35px;">
-            X
-          </h1>
-          <span>No Fiscal</span>
-        </div>
-      </div>
-      <div id="company" style="margin-top: 21px;text-align: left;">
-        <h2 class="name" style="margin-bottom: 10px;">FACTURA Nº: <span style="font-weight: bold;">
-            <%- factNro %>
-          </span></h2>
-        <h2 class="name" style="margin-bottom: 10px;">FECHA: <span style="font-weight: bold;">
-            <%- fechaFact %>
-          </span></h2>
-        <div style="margin-bottom: 7px;">CUIT: <span style="font-weight: bold;">
-            <%- cuitOrigen %>
-          </span></div>
-        <div style="margin-bottom: 7px;">IIBB: <span style="font-weight: bold;">
-            <%- iibbOrigen %>
-          </span></div>
-        <div style="margin-bottom: 7px;">Inicio de act.: <span style="font-weight: bold;">
-            <%- iniAct %>
-          </span></div>
-      </div>
-      </div>
-    </header>
+
     <main>
+      <div class="first">
+        <div id="logo" style="width: 55%;">
+          <img style="width: 100%;height:100% ;" src="<%- logo %> ">
+        </div>
 
-      <div id="details" class="clearfix">
-        <% if(clienteNro===99999999){ %>
-          <div id="client">
-            <div class="to">Consumidor Final</div>
-            <div class="email"><a href="mailto:<%- clienteEmail %> ">
-                <%- clienteEmail %>
-              </a></div>
-          </div>
-          <% }else { %>
-            <div id="client">
-              <div class="to">CLIENTE:</div>
+        <div id="company" style="margin-bottom: 21px;text-align: left;">
+          <h2 class="name" style="margin-bottom: 10px;border: 2px solid black;padding: 6px;">VALE DE ADELANTO DE
+            SUELDO</h2>
+          <h2 class="name" style="margin-bottom: 10px;">FECHA: <span style="font-weight: bold;">
+              <%- date %>
+            </span></h2>
+        </div>
+        <div id="details" class="clearfix">
+          <div id="client" style="margin-top: 20px;">
+            <h2 class="name">
+              <span style="font-weight: bold;">RECIBO Nº:</span>
+              <%- paymentNumber %>
+            </h2>
+            <h2 class="name">
+              <span style="font-weight: bold;">EMPLEADO:</span>
+              <%- providerName %>
+            </h2>
+            <h2 class="name">
+              <span style="font-weight: bold;">DNI:</span>
+              <%- dni %>
+            </h2>
+            <div class="email">
               <h2 class="name">
-                <%- clienteName %>
+                <span style="font-weight: bold;">TIPO DE LIQUIDACIÓN:</span>
+                <%- type %>
               </h2>
-              <h2 class="name">
-                <%- condIvaCliente %>
-              </h2>
-              <h2 class="name">
-                <%- tipoDoc %> : <%- clienteNro %>
-              </h2>
-              <div class="email"><a href="mailto:<%- clienteEmail %> ">
-                  <%- clienteEmail %>
-                </a></div>
             </div>
-            <% } %>
-              <div id="invoice">
-                <% if(cbteAsoc){ %>
-                  <br />
-                  <div class="to">COMPROBANTE ASOCIADO:</div>
-                  <h2 class="name">FACTURA Nº: </h2>
-                  <h2 class="name">
-                    <%- cbteAsoc %>
-                  </h2>
-                  <% }else{ %>
-                    <% if(parseInt(formaPago.code)===5){ %>
-                      <div class="to">Forma de Pago:</div>
-                      <% variosPagos.forEach(function(item){ %>
-                        <h2 class="name">
-                          <%- item.tipo_txt %>: $ <%- item.importe %>
-                        </h2>
-                        <% }); %>
-                          <% }else{ %>
-                            <div class="to">Forma de Pago:</div>
-                            <h2 class="name">
-                              <%- formaPago.string %>
-                            </h2>
-                            <% } %>
-                              <% } %>
-              </div>
-      </div>
+          </div>
+        </div>
+        <table border="0" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th class="no">Periodo</th>
+              <th class="desc" style="text-align: center;font-weight: bold">
+                <%- period %>
+              </th>
+              <th class="no">Importe</th>
+              <th class="desc" style="text-align: center;font-weight: bold;">$ <%- amount %>
+              </th>
+            </tr>
+          </thead>
 
-      <table border="0" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th class="no">CANT.</th>
-            <th class="desc">DESCRIPCION</th>
-            <th class="qty">PRECIO UNIT.</th>
-            <th class="total">TOTAL</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% listaItems.forEach(function(item){ %>
-            <%- include('./ItemFactNoFiscal.ejs', { itemName: item.nombre_prod, itemPrice: item.precio_ind, itemCant:
-              item.cant_prod, itemTotal: item.total_prod, tipoUn: item.unidad_tipo_prod}); %>
-              <% }); %>
-        </tbody>
-        <tfoot>
-        </tfoot>
-      </table>
-    </main>
-    <footer>
-      <table border="0" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th style="border: 1px solid white;" class="total">SUB-TOTAL: $<%- subTotalNoFiscal %>
-            </th>
-            <th style="border: 1px solid white;" class="total">
-              DESC.: $<%- totalDesc %>
-            </th>
-            <th style="border: 1px solid white;" class="total" style="font-size: 1.2em;font-weight: bold;">TOTAL: $<%-
-                totalFact %>
-            </th>
-          </tr>
-        </thead>
-      </table>
-      <div style="width: 100%;border-top: 2px solid #aaaaaa;margin-top: 10px;margin-bottom: 10px;"></div>
+          <tfoot>
+          </tfoot>
+        </table>
 
-      <div style="width: 40%">
-        <div style="position: absolute;left: 0%;">
-          <h3 style="margin-top: 5px;margin-bottom: 5px">
-            Vendedor:
-          </h3>
-          <h3 style="margin-top: 5px;margin-bottom: 5px">
-            <%- vendedor %>
-          </h3>
+        <h4 style="text-align: center;">BECA: MONOTRIBUTISTA</h4>
+
+        <div id="details" class="clearfix">
+          <div>
+            <h2 class="name">
+              <span style="font-weight: bold;">OBERVACIONES:</span>
+            </h2>
+            <div style="height: 90px;width: 100%;border: 1px solid black;">
+              <span>
+                <%- details %>
+              </span>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div id="company" style="margin-top: 21px;text-align: left;width: 50%;">
+          <div style="height: 50px;">
+
+          </div>
+          <hr style="color: #8080805c;" />
+          <h2 class="name" style="margin-bottom: 10px;text-align: center;">FIRMA</h2>
+          <div style="height: 50px;">
+
+          </div>
+          <hr style="color: #8080805c;" />
+          <h2 class="name" style="margin-bottom: 10px;text-align: center;">ACLARACIÓN</h2>
+
         </div>
       </div>
-      <div style="width: 50%;position: absolute;right: 0;text-align: left;">
-        <h3 style="margin-top: 5px; margin-bottom: 5px;text-align: right;">NO VÁLIDO COMO COMPROBANTE FISCAL
-        </h3>
+      <div class="copy" style="text-align: left;">
+        <div id="logo" style="width: 55%;">
+          <img style="width: 100%;height:100% ;" src="<%- logo %> ">
+        </div>
+
+        <div id="company" style="margin-bottom: 21px;text-align: left;">
+          <h2 class="name" style="margin-bottom: 10px;border: 2px solid black;padding: 6px;">VALE DE ADELANTO DE
+            SUELDO</h2>
+          <h2 class="name" style="margin-bottom: 10px;">FECHA: <span style="font-weight: bold;">
+              <%- date %>
+            </span></h2>
+        </div>
+        <div id="details" class="clearfix">
+          <div id="client" style="margin-top: 20px;">
+            <h2 class="name">
+              <span style="font-weight: bold;">RECIBO Nº:</span>
+              <%- paymentNumber %>
+            </h2>
+            <h2 class="name">
+              <span style="font-weight: bold;">EMPLEADO:</span>
+              <%- providerName %>
+            </h2>
+            <h2 class="name">
+              <span style="font-weight: bold;">DNI:</span>
+              <%- dni %>
+            </h2>
+            <div class="email">
+              <h2 class="name">
+                <span style="font-weight: bold;">TIPO DE LIQUIDACIÓN:</span>
+                <%- type %>
+              </h2>
+            </div>
+          </div>
+        </div>
+        <table border="0" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th class="no">Periodo</th>
+              <th class="desc" style="text-align: center;font-weight: bold">
+                <%- period %>
+              </th>
+              <th class="no">Importe</th>
+              <th class="desc" style="text-align: center;font-weight: bold;">$ <%- amount %>
+              </th>
+            </tr>
+          </thead>
+
+          <tfoot>
+          </tfoot>
+        </table>
+
+        <h4 style="text-align: center;">BECA: MONOTRIBUTISTA</h4>
+
+        <div id="details" class="clearfix">
+          <div>
+            <h2 class="name">
+              <span style="font-weight: bold;">OBERVACIONES:</span>
+            </h2>
+            <div style="height: 90px;width: 100%;border: 1px solid black;">
+              <span>
+                <%- details %>
+              </span>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div id="company" style="margin-top: 21px;text-align: left;width: 50%;">
+          <div style="height: 50px;">
+
+          </div>
+          <hr style="color: #8080805c;" />
+          <h2 class="name" style="margin-bottom: 10px;text-align: center;">FIRMA</h2>
+          <div style="height: 50px;">
+
+          </div>
+          <hr style="color: #8080805c;" />
+          <h2 class="name" style="margin-bottom: 10px;text-align: center;">ACLARACIÓN</h2>
+
+        </div>
       </div>
-      </div>
-      </div>
-    </footer>
+    </main>
 </body>
 
 </html>
