--- a/views/reports/payments/Advance.ejs
+++ b/views/reports/payments/Advance.ejs
@@ -17,8 +17,7 @@
         </div>
 
         <div id="company" style="margin-bottom: 21px;text-align: left;">
-          <h2 class="name" style="margin-bottom: 10px;border: 2px solid black;padding: 6px;">VALE DE ADELANTO DE
-            SUELDO</h2>
+          <h2 class="name" style="margin-bottom: 10px;border: 2px solid black;padding: 6px;">VALE DE ADELANTO</h2>
           <h2 class="name" style="margin-bottom: 10px;">FECHA: <span style="font-weight: bold;">
               <%- date %>
             </span></h2>
@@ -30,7 +29,7 @@
               <%- paymentNumber %>
             </h2>
             <h2 class="name">
-              <span style="font-weight: bold;">EMPLEADO:</span>
+              <span style="font-weight: bold;">MONOTRIBUTISTA:</span>
               <%- providerName %>
             </h2>
             <h2 class="name">
@@ -40,54 +39,97 @@
             <div class="email">
               <h2 class="name">
                 <span style="font-weight: bold;">TIPO DE LIQUIDACIÓN:</span>
-                <%- type %>
+                ADELANTO
               </h2>
             </div>
           </div>
         </div>
+
+
+        <h4 style="text-align: center;margin: 10px;">MONOTRIBUTISTA</h4>
+        <div class="divide">
+          <div id="details" class="clearfix">
+            <div>
+              <h2 class="name">
+                <span style="font-weight: bold;">OBERVACIONES:</span>
+              </h2>
+              <div style="height: 90px;width: 100%;border: 1px solid black;">
+                <span>
+                  <%- details %>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="divide">
+          <table border="0" cellspacing="0" cellpadding="0">
+            <thead>
+              <tr>
+                <th class="no" style="font-size: 18px;">PERIODOS</th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+              <tr>
+                <th class="desc" style="text-align: center;font-weight: bold">
+                  <%- period %>
+                </th>
+              </tr>
+            </thead>
+
+            <tfoot>
+            </tfoot>
+          </table>
+        </div>
         <table border="0" cellspacing="0" cellpadding="0">
           <thead>
             <tr>
-              <th class="no">Periodo</th>
-              <th class="desc" style="text-align: center;font-weight: bold">
-                <%- period %>
+              <th class="no" style="font-size: 20px;">Importe</th>
+              <th class="desc" style="text-align: center;font-weight: bold;font-size: 20px;">$ <%- amount %>
               </th>
-              <th class="no">Importe</th>
-              <th class="desc" style="text-align: center;font-weight: bold;">$ <%- amount %>
-              </th>
-            </tr>
           </thead>
 
           <tfoot>
           </tfoot>
         </table>
-
-        <h4 style="text-align: center;">BECA: MONOTRIBUTISTA</h4>
-
-        <div id="details" class="clearfix">
-          <div>
-            <h2 class="name">
-              <span style="font-weight: bold;">OBERVACIONES:</span>
-            </h2>
-            <div style="height: 90px;width: 100%;border: 1px solid black;">
-              <span>
-                <%- details %>
-              </span>
-            </div>
-          </div>
-        </div>
-        <hr />
         <div id="company" style="margin-top: 21px;text-align: left;width: 50%;">
-          <div style="height: 50px;">
+          <div style="height: 35px;">
 
           </div>
           <hr style="color: #8080805c;" />
           <h2 class="name" style="margin-bottom: 10px;text-align: center;">FIRMA</h2>
-          <div style="height: 50px;">
+          <div style="height: 35px;">
 
           </div>
           <hr style="color: #8080805c;" />
           <h2 class="name" style="margin-bottom: 10px;text-align: center;">ACLARACIÓN</h2>
+          <div style="height: 35px;">
+
+          </div>
+          <hr style="color: #8080805c;" />
+          <h2 class="name" style="margin-bottom: 10px;text-align: center;">DNI</h2>
 
         </div>
       </div>
@@ -158,12 +200,12 @@
         </div>
         <hr />
         <div id="company" style="margin-top: 21px;text-align: left;width: 50%;">
-          <div style="height: 50px;">
+          <div style="height: 35px;">
 
           </div>
           <hr style="color: #8080805c;" />
           <h2 class="name" style="margin-bottom: 10px;text-align: center;">FIRMA</h2>
-          <div style="height: 50px;">
+          <div style="height: 35px;">
 
           </div>
           <hr style="color: #8080805c;" />
