end new reports => pending and advances

--- a/views/reports/payments/Advance.ejs
+++ b/views/reports/payments/Advance.ejs
@@ -139,7 +139,7 @@
             <div class="email">
               <h2 class="name">
                 <span style="font-weight: bold;">TIPO DE LIQUIDACIÓN:</span>
-                <%- type %>º
+                <%- type %>
               </h2>
             </div>
           </div>
